--- a/public/garden_tags/computer-science/index.html
+++ b/public/garden_tags/computer-science/index.html
@@ -63,7 +63,7 @@
 <div class="container">
     
     <p>
-        <h3><a class="title" href="/notes/cs/cso/">Computer System Organization</a></h3>
+        <h3><a class="title" href="/notes/cs/cso/">CSO</a></h3>
         
 
 <i data-feather="calendar"></i>
